2019-06-16  Robby Stephenson  <robby@periapsis.org>

	* Fixed file preview generation.
	* Added data source for Kino-Teatr.ua.

2019-05-25  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.2.

2019-05-24  Robby Stephenson  <robby@periapsis.org>

	* Updated data source for TheGamesDB.net (Bug 407811).

2019-04-18  Robby Stephenson  <robby@periapsis.org>

	* Added data source for ComicVine.com.

2019-03-10  Robby Stephenson  <robby@periapsis.org>

	* Updated VNDB.org data source.

2019-02-24  Robby Stephenson  <robby@periapsis.org>

	* Corrected server for National Library of Lithuania (Bug 404743).

2019-02-20  Robby Stephenson  <robby@periapsis.org>

	* Added data source for MobyGames.com.

2019-02-14  Robby Stephenson  <robby@periapsis.org>

	* Updated IGDB data source to API v3.

2019-02-10  Robby Stephenson  <robby@periapsis.org>

	* Improved collection merging efficiency (Bug 349410).

2019-01-19  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug reading title from KinoPoisk (Bug 403184).

2019-01-04  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with setting IMDB rating in various locales (Bug 401894).

2019-01-02  Robby Stephenson  <robby@periapsis.org>

	* Added Amazon sites for BR, AU, IN, MX, and TR.

2018-12-18  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.1.4.

2018-12-17  Robby Stephenson  <robby@periapsis.org>

	* Updated Kino.de data source.

2018-12-09  Robby Stephenson  <robby@periapsis.org>

	* Updated KinoPoisk.ru data source.

2018-10-30  Robby Stephenson  <robby@periapsis.org>

	* Updated bedetheque.com data source to use https.

2018-10-24  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug to escape the group name when filtering in the Group View (Bug 399928).

2018-10-02  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug when using a regular expression for filtering in a number field (Bug 399323).

2018-09-02  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.1.3.